// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioInput.vue > renders OXD Radio Input 1`] = `
"<div data-v-d883c23b="" class="oxd-radio-wrapper"><label data-v-d883c23b="" class="">
    <!--v-if--><input data-v-d883c23b="" label="Radio" type="radio"><span data-v-d883c23b="" class="oxd-radio-input oxd-radio-input--active --label-right oxd-radio-input"></span>
  </label></div>"
`;

exports[`RadioInput.vue > should renders OXD Radio input with error 1`] = `
"<div data-v-d883c23b="" class="oxd-radio-wrapper"><label data-v-d883c23b="" class="">
    <!--v-if--><input data-v-d883c23b="" label="Radio" type="radio"><span data-v-d883c23b="" class="oxd-radio-input oxd-radio-input--active oxd-radio-input--error --label-right oxd-radio-input"></span>
  </label></div>"
`;
